--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -6,8 +6,8 @@
   <input name="username" id="username" required />
   <label for="password">Contraseña</label>
   <input type="password" name="password" id="password" required />
-  <label for="confirmPassword">Confirmar Contraseña</label>
-  <input type="password" value="Confirmar" />
+  <label for="confiPassword">Confirmar Contraseña</label>
+  <input type="password" name="confirmPassword" id="password" required />
   <input type="submit" value="Registrarse" />
 </form>
 {% endblock %}
