--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,7 +5,8 @@
   <h1>Taylor Swift</h1>
   <ul>
     {% if g.user %}
-    <li><span>{{ g.user['username'] }}</span></li>
+    <li><span>{{ g.user['username'] }} -</span></li>
+    <li><span>{{ g.user['email'] }}</span></li>
     <li><a href="{{ url_for('auth.logout') }}">cerrar sesión</a> {% else %}</li>
 
     <li><a href="{{ url_for('auth.register') }}">Registrarse</a></li>
