--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -4,6 +4,8 @@
 <form method="post">
   <label for="username">Usuario</label>
   <input name="username" id="username" required />
+  <label for="email">Email</label>
+  <input type="email" name="email" id="email" required />
   <label for="password">Contraseña</label>
   <input type="password" name="password" id="password" required />
   <label for="confiPassword">Confirmar Contraseña</label>
