modificar el mail logeado

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,14 +7,16 @@
     {% if g.user %}
     <li><span>{{ g.user['username'] }} -</span></li>
     <li><span>{{ g.user['email'] }}</span></li>
+    <li><a href="{{ url_for('auth.cambMail') }}">Cambiar mail</a> </li>
     <li><a href="{{ url_for('auth.logout') }}">cerrar sesión</a> {% else %}</li>
-
+    
     <li><a href="{{ url_for('auth.register') }}">Registrarse</a></li>
     <li>
       <a href="{{ url_for('auth.login') }}">Iniciar sesión</a>
-      {% endif %}
     </li>
   </ul>
+  {% endif %}
+
 </nav>
 <section class="content">
   <header>{% block header %}{% endblock %}</header>
